--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "CommonJS",
+        "module": "ESNext",
         "declaration": true,
-        "outDir": "dist",
+        "outDir": "dist/esm",
+        "moduleResolution": "Node",
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist", "tests"]
